phase_one_ws/log/build_2025-05-25_23-10-35/motion_pkg/stderr.log
  File "/home/mido/Music/phase_one_ws/install/motion_pkg/lib/python3.10/site-packages/motion_pkg/path_planning_1.py", line 282
    if not all(isinstance(coord, (int, float)) for coord in self.escape_target)):
                                                                               ^
SyntaxError: unmatched ')'

